# factorio-server

./: .gitignore  Cargo.toml  README.md  factorio-versions.json  flake.nix
.github/workflows/: container.yaml
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  error.rs  main.rs  mods.rs
crates/factorio-api/: Cargo.toml
crates/factorio-api/src/: auth.rs  lib.rs
examples/: mods.ron
flake-parts/: cargo.nix  ci.nix  dockerImages.nix  factorio.nix  pre-commit.nix  shells.nix
